# axum-xml

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  rejection.rs  tests.rs
