[package]
name = "axum-xml"
version = "0.1.0"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "XML extractor for axum"
repository = "https://github.com/PhotonQuantum/axum-xml"
readme = "README.md"
license = "MIT"
keywords = ["axum", "xml", "parser", "parsing", "extractor"]
categories = ["parsing", "text-processing", "encoding", "web-programming", "web-programming::http-server"]
exclude = [
    ".github/*",
    ".mergify.yml",
    "rust-toolchain.toml",
    "bacon.toml"
]

[features]
encoding = ["quick-xml/encoding"]

[dependencies]
async-trait = "0.1"
axum-core = "0.1"
http-body = "0.4"
http = "0.2"
mime = "0.3"
quick-xml = { version = "0.22", features = ["serialize"] }
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["rt", "macros"] }
bytes = "1.1"

[dev-dependencies]
axum = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
tower-service = "0.3"
uuid = { version = "0.8", features = ["serde"] }
